@@ -75,7 +75,7 @@ public class AppConfig {
 
     private static Properties loadFromClasspath(String appMode) throws IOException {
         Properties properties = new Properties();
-        String propertyfile = String.format("securitytokenservice.%s.properties", appMode);
+        String propertyfile = "securitytokenservice.%s.properties".formatted(appMode);
         log.info("Loading default properties from classpath: {}", propertyfile);
         InputStream is = AppConfig.class.getClassLoader().getResourceAsStream(propertyfile);
         if(is == null) {
